migration-result/ver/13.x/server-access/guides/host-user-creation.mdx
---
title: Configure Teleport to Create Host Users
description: How to configure Teleport to automatically create transient host users.
version: '13.x'
---

Teleport's SSH Service can be configured to automatically create local Unix users
upon login.

This saves you from having to manually create users for each member of an
organization and provides more fine-grained control of permissions on a given
host. Host users created by Teleport are transient and will be deleted at the
end of an SSH session.

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- A running Teleport Node. See the [Server Access Getting Started Guide](/ver/13.x/server-access/getting-started) for  how to add a Node to your Teleport cluster.
- The following utilities should be available in the PATH for the Teleport SSH Service,
  since it must execute these commands in order to create transient users:
  - `useradd`
  - `userdel`
  - `usermod`
  - `groupadd`
  - `getent`
  - `visudo`
- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/2. Configure a role

First, create a role with `create_host_user_mode` set to `drop` or `keep`.

Setting the option to `drop` will create transient users that are deleted once the
session ends. Setting it to `keep` will create permanent users on the host at
login time.

The following role specification will allow users to log in as `nginxrestarter` on
any matching Node. The host user will be created and added to the groups listed in
`host_groups`. They will also be given permission to restart the Nginx service as
root.

Save the file below as `auto-users.yaml`

```yaml
kind: role
version: v5
metadata:
  name: auto-users
spec:
  options:
    # Allow automatic creation of users.
    create_host_user_mode: drop
  allow:
    logins: [ "nginxrestarter" ]
    # List of host groups the created user will be added to. Any that don't already exist are created.
    host_groups: [ubuntu, nginx, other]
    # List of entries to include in a temporary sudoers file created in /etc/sudoers.d
    host_sudoers: [
       # This line will allow the `nginxrestarter` user to run
       # `systemctl restart nginx.service` as
       # root without requiring a password.
       # The sudoers entries will be prefixed with `nginxrestarter` in this case.
       # sudoers file reference documentation: https://www.sudo.ws/docs/man/1.8.17/sudoers.man/
       "ALL = (root) NOPASSWD: /usr/bin/systemctl restart nginx.service"
    ]
    node_labels:
      'env': 'devel'
```

Create the role:

```code
$ tctl create -f auto-users.yaml
# role 'auto-users' has been created
```

Each value of the `logins` field must conform to the username requirements
of the Linux distribution being used. See [User/Group Name Syntax](https://systemd.io/USER_NAMES/) for requirements in common distributions.

<Warning>
  When a Teleport user accesses an SSH Service instance, Teleport checks each of the
  user's roles that match the instance. If at least one role matches the instance
  but does not specify `create_host_user_mode` to be either `keep` or `drop`,
  automatic user creation will be disabled. Roles that do not match the server will
  not be checked.

  If multiple roles match where one might specify `keep` and another `drop`,
  Teleport will default to `keep`, retaining the user on the server after the session
  ends.
</Warning>

<Warning>
  When multiple roles contain `host_sudoers` entries, the sudoers file
  will have the entries written to it ordered by role name
</Warning>

If a role includes a `deny` rule that sets `host_sudoers` to `'*'`, the user will
have all sudoers entries removed when accessing matching Nodes, otherwise `deny`
rules are matched literally when filtering:

```yaml
kind: role
version: v5
metadata:
  name: auto-users
spec:
  options:
    create_host_user_mode: drop
  deny:
    host_sudoers: [
       "*" # ensure that users in this role never have sudoers files created on matching Nodes
       "ALL=(ALL) NOPASSWD: ALL" # host_sudoers entries matching this are filtered out
    ]
    node_labels:
      'env': 'devel'
```

If an SSH Node must never allow the automatic creation of transient Unix users
you can set `disable_create_host_user` to `true` in the Node's configuration:

```yaml
# teleport.yaml
teleport:
  nodename: node
ssh_service:
  enabled: true
  # Disable automatic host user creation on this Node, regardless of role permissions.
  disable_create_host_user: true
```

Assign the `auto-users` role to your Teleport user by running the following
commands, depending on whether you authenticate as a local Teleport user or via
the `github`, `saml`, or `oidc` authentication connectors:

<Tabs>
  <Tab title="Local User">
    Retrieve your local user's configuration resource:

    ```code
    $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
    ```

    Edit `out.yaml`, adding `auto-users` to the list of existing roles:

    ```diff
      roles:
       - access
       - auditor
       - editor
    +  - auto-users
    ```

    Apply your changes:

    ```code
    $ tctl create -f out.yaml
    ```
  </Tab>

  <Tab title="GitHub">
    Retrieve your `github`  configuration resource:

    ```code
    $ tctl get github/github --with-secrets > github.yaml
    ```

    Edit `github.yaml`, adding `auto-users` to the
    `teams_to_roles` section. The team you will map to this role will depend on how
    you have designed your organization's RBAC, but it should be the smallest team
    possible within your organization. This team must also include your user.

    Here is an example:

    ```diff
      teams_to_roles:
        - organization: octocats
          team: admins
          roles:
            - access
    +       - auto-users
    ```

    Apply your changes:

    ```code
    $ tctl create -f github.yaml
    ```

    <Warning>
      Note the `--with-secrets` flag in the `tctl get` command. This adds the value of
      `spec.signing_key_pair.private_key` to `github.yaml`. This is a sensitive value,
      so take precautions when creating this file and remove it after updating the resource.
    </Warning>
  </Tab>

  <Tab title="SAML">
    Retrieve your `saml`  configuration resource:

    ```code
    $ tctl get --with-secrets saml/mysaml > saml.yaml
    ```

    Edit `saml.yaml`, adding `auto-users` to the
    `attributes_to_roles` section. The attribute you will map to this role will
    depend on how you have designed your organization's RBAC, but it should be the
    smallest group possible within your organization. This group must also include
    your user.

    Here is an example:

    ```diff
      attributes_to_roles:
        - name: "groups"
          value: "my-group"
          roles:
            - access
    +       - auto-users
    ```

    Apply your changes:

    ```code
    $ tctl create -f saml.yaml
    ```

    <Warning>
      Note the `--with-secrets` flag in the `tctl get` command. This adds the value of
      `spec.signing_key_pair.private_key` to `saml.yaml`. This is a sensitive value,
      so take precautions when creating this file and remove it after updating the resource.
    </Warning>
  </Tab>

  <Tab title="OIDC">
    Retrieve your `oidc`  configuration resource:

    ```code
    $ tctl get oidc/myoidc --with-secrets > oidc.yaml
    ```

    Edit `oidc.yaml`, adding `auto-users` to the
    `claims_to_roles` section. The claim you will map to this role will depend on
    how you have designed your organization's RBAC, but it should be the smallest
    group possible within your organization. This group must also include your
    user.

    Here is an example:

    ```diff
      claims_to_roles:
        - name: "groups"
          value: "my-group"
          roles:
            - access
    +       - auto-users
    ```

    Apply your changes:

    ```code
    $ tctl create -f oidc.yaml
    ```

    <Warning>
      Note the `--with-secrets` flag in the `tctl get` command. This adds the value of
      `spec.signing_key_pair.private_key` to `oidc.yaml`. This is a sensitive value,
      so take precautions when creating this file and remove it after updating the resource.
    </Warning>
  </Tab>
</Tabs>

Log out of your Teleport cluster and log in again to assume the new role.

## Step 2/2 Test host user creation

When you connect to a remote Node via `tsh`, and host user creation is enabled, the
Teleport SSH Service will automatically create a user on the host:

```code
$ tsh login
$ tsh ssh nginxrestarter@develnode
$ grep "nginxrestarter" /etc/passwd
# nginxrestarter:x:1001:1003::/home/nginxrestarter:/bin/bash
$ grep "other" /etc/group
# other:x:1002:nginxrestarter
$ exit
$ tsh ssh admin@develnode # checking the user was deleted after logout
$ grep "nginxrestarter" /etc/passwd
$ echo $?
# 1
```

When the user above logs in, the `nginxrestarter` user and any groups that do
not already exist are created on the host. The `nginxrestarter` user is added to
the `ubuntu`, `nginx`, and `other` groups, as specified in the `host_groups`
field.

The Teleport SSH Service executes `useradd` to create new users on the host, and
returns an error if it cannot find the `useradd` binary. The `useradd` command
creates a new home directory with the name of the new host user and adds the
user to the groups specified in the Teleport user's roles.

Aside from specifying a home directory and groups, the SSH Service executes
`useradd` with the system defaults. For example, it associates the user with the
default login shell for the host, which you can specify by setting the `SHELL`
field in `/etc/default/useradd`. See the `useradd` manual for your system for a
full description of the default behavior.

The Teleport SSH Service also creates a file in `/etc/sudoers.d` with the
contents of the `host_sudoers` file written with one entry per line, each
prefixed with the username of the user that has logged in.

The session can then proceed as usual, however once the SSH session ends, the user
will be automatically removed and their home directory will be deleted, as the
matching role specified they should be dropped. Files owned by the deleted user,
created outside the home directory, will remain in place. Groups that were created
will remain on the system after the session ends.

Should a Teleport SSH instance be restarted while a session is in progress, the user
will be cleaned up at the next Teleport restart.

## Next steps

- Configure automatic user provisioning for [Database Access](/ver/13.x/database-access/rbac/configuring-auto-user-provisioning).
- Configure automatic user provisioning for [Desktop Access](/ver/13.x/desktop-access/rbac#automatic-user-creation).
